--- a/.github/workflows/git-run.yml
+++ b/.github/workflows/git-run.yml
@@ -1,14 +1,62 @@
-name: GitHub Change Deployment
+name: Test
 
-# on:
-#   push:
-#     branches: [ main ]
-on: workflow_dispatch
+
+on:
+  workflow_dispatch:
+    
 
 jobs:
+
   build:
-    name: 'Build'
+    name: Build
     runs-on: ubuntu-latest
+  
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Set Node.js 12.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12.x
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Compile
+      run: npm run build
+
+    
+  changeApproval:
+    name: ServiceNow Change Approval
+    needs: build
+    runs-on: ubutun-latest
+
     steps:     
-      - name: Build Test
-        run: echo "Build Test"
+      - name: ServiceNow Change Approval
+        uses: ServiceNow/servicenow-devops-change@v3.1.0
+        id: create
+        with:
+          devops-integration-user-name: ${{ secrets.DevOps Integration User }}
+          devops-integration-user-password: ${{ secrets.Devops@123 }}
+          instance-url: ${{ secrets.https://dev258552.service-now.com/ }}
+          tool-id: ${{ secrets.DevOps___19700101215101_Git7 }}
+          context-github: ${{ toJSON(github) }}
+          job-name: 'ServiceNow Change Approval'
+          change-request: '{"setCloseCode":"true","attributes":{"short_description":"Automated Software Deployment","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab; When the change is approved the implementation happens automated by the CICD pipeline within the change planned start and end time window.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed"}}'
+          interval: '100'
+          timeout: '3600'
+          changeCreationTimeOut: '3600'
+          abortOnChangeCreationFailure: true
+          abortOnChangeStepTimeout: true
+      - name: Output of Change Creation
+        run: echo "change-request-number = ${{ steps.create.outputs.change-request-number }} and change-request-sys-id = ${{ steps.create.outputs.change-request-sys-id }} " >> $GITHUB_OUTPUT
+    
+  deploy:
+    name: Deploy
+    needs: changeApproval
+    runs-on: ubutun-latest
+
+    steps:     
+      - name: Run Deployment Script
+        run: echo "Deployment Finished....."
