--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,8 @@
-name: blank
+name: test
+
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: 
     
 
 jobs:
@@ -9,24 +10,28 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    timeout-minutes: 30
   
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2
 
-    - name: Set Node.js 20.x
-      uses: actions/setup-node@v4
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
       with:
-        node-version: 20.x
+        node-version: 12.x
 
-    - name: Install package-lock
-      run: npm install --save moment
+    
+    - run: npm install
+      name: Install Dependencies
+
+    - run: npm run build
+      name: Complile Application
       
-    - name: Install npm
-      run: npm ci
 
-    - name: Compile
-      run: npm run build --if-present
+    
+
+    
   changeApproval:
     name: ServiceNow Change Approval
     needs: build
@@ -39,27 +44,39 @@ jobs:
         with:
           devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
           devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-          #devops-integration-user-name: 'devops.integration.user'
-          #devops-integration-user-password: '6[q$oMR1OJMo3=Zs-t%$q,xwbOE7]?u7jTNRx4SvcI[[QwtPLw(*w&D_M5<(eq;sKv63Sq?X@O1!KNxB^prZwt<Ja)NL)&7)4:Tb'
           instance-url: ${{ secrets.SN_INSTANCE_URL }}
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'ServiceNow Change Approval'
-          change-request: '{"setCloseCode":"true","attributes":{"short_description":"Automated Software Deployment","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab; When the change is approved the implementation happens automated by the CICD pipeline within the change planned start and end time window.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed"}}'
+          change-request: '{"setCloseCode":"true","autoCloseChange":"true","attributes":{"short_description":"Automated Software Deployment","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab; When the change is approved the implementation happens automated by the CICD pipeline within the change planned start and end time window.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed"}}'
           interval: '100'
-          timeout: '3600'
-          changeCreationTimeOut: '3600'
+          timeout: '60'
+          changeCreationTimeOut: '60'
           abortOnChangeCreationFailure: true
           abortOnChangeStepTimeout: true
       - name: Output of Change Creation
         run: echo "change-request-number = ${{ steps.create.outputs.change-request-number }} and change-request-sys-id = ${{ steps.create.outputs.change-request-sys-id }} " >> $GITHUB_OUTPUT
-        
+    
   deploy:
     name: Deploy
     needs: changeApproval
     runs-on: ubuntu-latest
+
     steps:     
       - name: Run Deployment Script
         run: echo "Deployment Finished....."
 
-
+  registerartifact:
+    name: Register Artifact
+    runs-on: ubuntu-latest
+    steps:
+      - name: ServiceNow Register Artifact
+        uses: ServiceNow/servicenow-devops-register-artifact@v3.1.0
+        with:
+          devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+          devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+          instance-url: ${{ secrets.SN_INSTANCE_URL }}
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+          context-github: ${{ toJSON(github) }}
+          job-name: 'Register Artifact'
+          artifacts: '[{"name": "com:customactiondemo","version": "1.${{ github.run_number }}","semanticVersion": "1.${{ github.run_number }}.0","repositoryName": "${{ github.repository }}"}]'
